Creating Authorization still....

--- a/app/views/display.erb
+++ b/app/views/display.erb
@@ -1,2 +1,18 @@
-<p> BLOG <p>
+<a href = '/login'><h1>Login </h1></a>
 
+<p> Space <p>
+
+<h6> Sign Up </h6>
+
+<div class="portal">
+<form action = '/login' method = 'post'>
+  <input type = 'hidden' name = '_method' value = 'put'/>
+  <input type = 'text' name = 'username' placeholder = 'username' >
+  <br>
+
+  <input type = 'text' name = 'email' placeholder = 'email' >
+  <br>
+
+  <input type = 'password' name = 'password' placeholder = 'password' >
+</form>
+</div>
