Created Dashboard Page

--- a/app/views/display.erb
+++ b/app/views/display.erb
@@ -2,11 +2,15 @@
 
 <p> Space <p>
 
-<h6> Sign Up </h6>
-
 <div class="portal">
 <form action = '/login' method = 'post'>
-  <input type = 'hidden' name = '_method' value = 'put'/>
+
+  <div class= "submit">
+    <input type="submit" value="Sign Up">
+  </div>
+
+  <input type = 'hidden' name = '_method' value = 'put'/
+  >
   <input type = 'text' name = 'username' placeholder = 'username' >
   <br>
 
@@ -14,5 +18,6 @@
   <br>
 
   <input type = 'password' name = 'password' placeholder = 'password' >
+
 </form>
 </div>
