--- a/app/views/display.erb
+++ b/app/views/display.erb
@@ -3,14 +3,12 @@
 <p> Space <p>
 
 <div class="portal">
-<form action = '/login' method = 'post'>
+<form action = '/' method = 'post'>
 
   <div class= "submit">
     <input type="submit" value="Sign Up">
   </div>
 
-  <input type = 'hidden' name = '_method' value = 'put'/
-  >
   <input type = 'text' name = 'username' placeholder = 'username' >
   <br>
 
