Login and update a post and go back to the dashboard

--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,3 +1,7 @@
+<div class= "dashbutton">
+  <a href = '/dashboard'><input type="submit" value = "Dashboard"> </a>
+</div>
+
 <% @blogs.posts.each do |blog| %>
 <div class= "text"><%=blog.text %></div>
 <% end %>
